Fix background image on small pages

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,3 +1,4 @@
 .header {
+  padding-top: 15px;
   width: 100%;
 }
